fixed nav-menu-visible when max-width is 820px, now its displayed in a row

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -214,11 +214,13 @@
     background: white;
     justify-content: center;
     top: 50px;
+    padding-right: 100px;
   }
 
   .nav-menu-visible {
     display: block !important;
-    display: flex;
+    display: flex !important;
+    margin-top: 20px;
   }
 
   .nav-dropdown.open {
